initial work on frontend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ChainOfResponsiblity490)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ChainOfResponsiblity490 main.cpp DigApp.cpp DigApp.h)
+add_executable(ChainOfResponsiblity490 main.cpp DigApp.cpp DigApp.h Menu.cpp Menu.h Material.h)
